<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/person"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/person_svg"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/category_drawable"
            android:title="@string/menu_category" />
        <item
            android:id="@+id/nav_shopping_list"
            android:icon="@drawable/shopping_list_drawable"
            android:title="@string/shopping_list_drawer" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/cart_drawable"
            android:title="@string/cart_drawer" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/history_drawable"
            android:title="@string/history_drawer" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/person_drawable"
            android:title="@string/profile_drawer" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/setting_drawable"
            android:title="@string/setting_drawer" />

    </group>
</menu>